# OptiHedge

./: .dockerignore  .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/engine/: __init__.py  agent.py  cache.py  lstm-gat.py  news.py  risk.py  sector.py  strategycomparison.py
backend/engine/providers/: __init__.py  forex_provider.py  yfinance_provider.py
backend/engine/tests/: test_news.py  test_risk.py  test_sync.py
backend/polymarket/: market_fetch.py
frontend/: .gitignore  middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/hedge/: page.tsx
frontend/app/homepage/: HomePageContainer.tsx  Title.tsx
frontend/app/risk/: page.tsx
frontend/app/upload/: actions.ts  page.tsx
frontend/components/: GoogleLoginButton.tsx  Navbar.tsx
frontend/components/dashboard/: DashboardContainer.tsx  MetricWidget.tsx  RiskCard.tsx  SortableWidget.tsx  WalletSelector.tsx  WidgetPlaceholder.tsx  WidgetSearch.tsx
frontend/components/hedge/: ExecReport.tsx  HedgeContainer.tsx  NewsWidget.tsx  Polymarket.tsx  RiskCharts.tsx
frontend/components/mainpage/: AsciiContainer.tsx  LandingPage.tsx  Navbar.tsx  NavbarClient.tsx  NavbarVisibilityWrapper.tsx  PageClientWrapper.tsx  ScrollArrow.tsx
frontend/components/mainpage/sections/: FeaturesBento.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  PortfolioMiniature.tsx  ProblemSolution.tsx
frontend/components/ui/: tooltip.tsx
frontend/lib/supabase/: server.ts
frontend/lib/utils/: formatters.ts
frontend/public/: ascii-art.txt
frontend/types/: dashboard.ts  hedge.ts
