[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "ta-lib>=0.6.8",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
