[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cvxpy>=1.8.1",
    "fastapi>=0.135.1",
    "finviz>=2.0.0",
    "groq>=0.37.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.11",
    "langsmith>=0.7.17",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "polygon-api-client>=1.16.3",
    "pyportfolioopt>=1.6.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "quantstats>=0.0.81",
    "riskfolio-lib>=7.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "stable-baselines3>=2.7.1",
    "ta-lib>=0.6.8",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
